--- a/desafio-a-copa/src/app/resultado-copa/resultado-copa.component.css
+++ b/desafio-a-copa/src/app/resultado-copa/resultado-copa.component.css
@@ -5,3 +5,14 @@
 .resultado-copa {
     margin-top: 30px;
 }
+
+
+.desafio-btn-selecionar-novas-equipes {     
+    height: 100%;        
+    text-align: center;    
+    border: 0;    
+    background-color: rgb(48, 47, 47);
+    font-size: 18px;
+    color: lightgray;
+    font-family: Arial, Helvetica, sans-serif;
+}
