--- a/desafio-a-copa/src/app/resultado-copa/resultado-copa.component.html
+++ b/desafio-a-copa/src/app/resultado-copa/resultado-copa.component.html
@@ -1,7 +1,11 @@
 <app-header-copa [fase]="HEADER_FASE" [descricao]="HEADER_DESCRICAO"></app-header-copa>
 
-<div class="container-fluid resultado-copa">  
-  <app-resultado-card-equipe *ngFor="let equipe of equipesDaCopa; let posicao = index" 
-  [posicao]="posicao + 1"
-  [nomeEquipe]="equipe.nome" ></app-resultado-card-equipe>  
+<div class="container-fluid resultado-copa">
+  <app-resultado-card-equipe *ngFor="let equipe of equipesDaCopa; let posicao = index" [posicao]="posicao + 1"
+    [nomeEquipe]="equipe.nome"></app-resultado-card-equipe>
+  <div class="row" >
+    <div class="col" align="center">
+      <button (click)="selecioneNovasEquipes()" class="desafio-btn-selecionar-novas-equipes">Selecionar novas equipes</button>
+    </div>    
+  </div>
 </div>
